--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "push:baidu": "node scripts/push-baidu.js"
   },
   "dependencies": {
     "form-data": "^4.0.5",
