--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "push:baidu": "node scripts/push-baidu.js"
   },
   "dependencies": {
+    "dotenv": "^17.2.4",
     "form-data": "^4.0.5",
     "lucide-react": "^0.562.0",
     "playwright": "^1.58.2",
